<resources>
    <string name="app_name">CaFinder</string>
    <string-array name="login_as">
        <item>Client</item>
        <item>Business Owner</item>
    </string-array>
    <string name="title_activity_client_dashboard">ClientDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Client Dashboard</string>
    <string name="menu_gallery">View Cars</string>
    <string name="menu_slideshow">Privacy Policy</string>
    <string name="menu_contact_support">Contact and Support</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_faq">Frequently Asked Questions</string>
    <string name="menu_termsAndConditions">Terms and Agreements</string>
    <string name="title_activity_business_owner_dash_board">BusinessOwnerDashBoard</string>


    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="years">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
    </string-array>
    <string-array name="addresses">
        <item>Purok-141 Z, Sumpong malaybalay City</item>
        <item>Purok-15 H, San Jose malaybalay City</item>
        <item>Purok-8 B, Sta. Ana malaybalay City</item>
    </string-array>

    <string-array name="engine_type">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>

    <string-array name="daysRented">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="approveOrDisapprove">
        <item>Approve</item>
        <item>Disapprove</item>
    </string-array>

    <string-array name="hoursOptions">
        <item>8 Hrs</item>
        <item>12 Hrs</item>
        <item>24 Hrs</item>
    </string-array>

    <string-array name="regions">
        <item>REGION X</item>
    </string-array>

    <string-array name="provinces">
        <item>BUKIDNON</item>
        <item>CAMIGUIN</item>
        <item>LANAO DEL NOTRTE</item>
        <item>MISAMIS OCCIDENTAL</item>
        <item>MISAMIS ORIENTAL</item>
    </string-array>

    <string-array name="municipalities">
        <item>Baungon</item>
        <item>Cabanglasan</item>
        <item>Damulog</item>
        <item>Dangcagan</item>
        <item>Don Carlos</item>
        <item>Impasug-Ong</item>
        <item>Kadingilan</item>
        <item>Kalilangan</item>
        <item>Kibawe</item>
        <item>Kitaotao</item>
        <item>Lantapan</item>
        <item>Libona</item>
        <item>Malaybalay</item>
        <item>Malitbog</item>
        <item>Manolo Fortich</item>
        <item>Maramag</item>
        <item>Pangantucan</item>
        <item>Quezon</item>
        <item>San Fernando (BK)</item>
        <item>Sumilao</item>
        <item>Talakag</item>
        <item>Valencia</item>

    </string-array>

    <string-array name="gasType">
        <item>Unleaded</item>
        <item>Special</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="carType">
        <item>Van</item>
        <item>Pick-up</item>
        <item>Sedan</item>
        <item>SUV</item>
    </string-array>

    <string-array name="placesToVisit">
        <item>Malaybalay City</item>
        <item>Valencia City</item>
        <item>Municipality of Lantapan</item>
    </string-array>

    <string-array name="rating">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>


</resources>